fix: Fixed h3+ from being off-center in certain styles

--- a/styles/monochrome.css
+++ b/styles/monochrome.css
@@ -73,8 +73,7 @@ body {
     padding-left: 1.5%;
     padding-right: 1.5%;
 }
-.bodies h1, h2{
-
+.bodies h1, h2, h3, h4, h5, h6{
     align-self: center;
 }
 
